# cpp_vscode

./: CMakeLists.txt  cmp.sh  code.cpp  gen.cpp  gen_input.cpp  input.txt  run.sh  test.sh  test.txt  vmcubeLauncher 2.ica  vmcubeLauncher.ica  wl.sh
